--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
   "java.project.sourcePaths": [
-    "01_Salida_de_datos_por_pantalla\\ejemplos",
-    "01_Salida_de_datos_por_pantalla\\ejercicios",
+    "03_Lectura_de_datos_desde_teclado/ejemplos",
+    "02_Variables/ejercicios",
+    "02_Variables/ejemplos",
     "02_Variables",
-    "02_Variables\\ejercicios",
-    "02_Variables\\ejemplos",
-    "03"
+    "01_Salida_de_datos_por_pantalla/ejercicios",
+    "01_Salida_de_datos_por_pantalla/ejemplos",
+    "03_Lectura_de_datos_desde_teclado/ejercicios"
   ],
   "java.dependency.syncWithFolderExplorer": true
 }
