--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
   "java.project.sourcePaths": [
+    "04_Sentencia_Condicional/ejemplos",
+    "03_Lectura_de_datos_desde_teclado/ejercicios",
     "03_Lectura_de_datos_desde_teclado/ejemplos",
     "02_Variables/ejercicios",
     "02_Variables/ejemplos",
     "02_Variables",
     "01_Salida_de_datos_por_pantalla/ejercicios",
     "01_Salida_de_datos_por_pantalla/ejemplos",
-    "03_Lectura_de_datos_desde_teclado/ejercicios"
+    "04_Sentencia_Condicional/ejercicios"
   ],
   "java.dependency.syncWithFolderExplorer": true
 }
