Añado el ejercicio de histogramas

--- a/05_Bucles/.vscode/settings.json
+++ b/05_Bucles/.vscode/settings.json
@@ -2,7 +2,9 @@
   "java.project.sourcePaths": [
     ".",
     "ejemplos",
-    "ejercicios"
+    "ejercicios",
+    "Bloque_try_catch_finally",
+    "ejercicio_histograma"
   ],
   "java.format.settings.url": "eclipse-formatter.xml"
 }
