Añado trabajo de clase y algo de sieteymedia

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,8 @@
     "08_Funciones\\ejemplos",
     "08_Funciones\\ejercicios",
     "09_P_O_O\\ejemplos",
-    "09_P_O_O\\ejercicios"
+    "09_P_O_O\\ejercicios",
+    "09_P_O_O\\sieteymedia"
   ],
   "java.dependency.syncWithFolderExplorer": true
 }
